# read_paper

./: .env.example  .gitignore  README.md  app.py  requirements.txt
cli/: README.md  atr.py  pyproject.toml
cli/atr/: __init__.py  __main__.py  atr.toml
cli/treeflow/: __init__.py  __main__.py  treeflow.toml
static/: app.js  styles.css
templates/: index.html
